@@ -47,7 +47,7 @@ end
 ## Testing Framework
 if prefer :unit_test, 'rspec'
   gem 'rspec-rails', '>= 2.11.0', :group => [:development, :test]
-  gem 'capybara', '>= 1.1.2', :group => :test
+  gem 'capybara', '>= 1.1.2', :group => :test if prefer :integration, 'rspec-capybara'
   if prefer :orm, 'mongoid'
     # use the database_cleaner gem to reset the test database
     gem 'database_cleaner', '>= 0.8.0', :group => :test
@@ -56,10 +56,16 @@ if prefer :unit_test, 'rspec'
   end
   gem 'email_spec', '>= 1.2.1', :group => :test
 end
+if prefer :unit_test, 'minitest'
+  gem 'minitest-spec-rails', '>= 3.0.7', :group => :test
+  gem 'minitest-wscolor', '>= 0.0.3', :group => :test
+  gem 'capybara', '>= 1.1.2', :group => :test if prefer :integration, 'minitest-capybara'
+end
 if prefer :integration, 'cucumber'
   gem 'cucumber-rails', '>= 1.3.0', :group => :test, :require => false
   gem 'database_cleaner', '>= 0.8.0', :group => :test unless prefer :orm, 'mongoid'
   gem 'launchy', '>= 2.1.2', :group => :test
+  gem 'capybara', '>= 1.1.2', :group => :test
 end
 gem 'turnip', '>= 1.0.0', :group => :test if prefer :integration, 'turnip'
 gem 'factory_girl_rails', '>= 4.1.0', :group => [:development, :test] if prefer :fixtures, 'factory_girl'
