@@ -2,7 +2,9 @@ h1. CHANGELOG
 
 h2. 2.2.12 unreleased
 
-* improve 'extras' recipe to add 'quiet_assets' option 
+* add MiniTest to testing options
+* add 'fabrication' gem to fixtures options (contributed by Taylor Mock)
+* improve 'extras' recipe to add 'quiet_assets' option
 
 h2. 2.2.11 October 5, 2012
 
